// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Timeline Card media > should match the snapshot ( IMAGE ) 1`] = `
<div>
  <div
    class="sc-Qotzb gPGhhl card-media-wrapper card-media"
    mode="VERTICAL_ALTERNATING"
  >
    <div
      class="sc-icnseD gOZSNH"
      height="200"
    >
      <img
        alt="Image"
        class="sc-fYsHOw qMwu"
        data-testid="timeline-card-content-image"
        height="auto"
        loading="lazy"
        mode="VERTICAL_ALTERNATING"
        src="https://picsum.photos/200/300"
        width="100%"
      />
    </div>
  </div>
  <div
    class="sc-fWnslK idIbcW"
    mode="VERTICAL_ALTERNATING"
  >
    <div
      class="sc-kpOvIu NBiZG"
    >
      <h1
        class="sc-jPkiSJ ecXWgU card-title card-title"
      />
    </div>
    <h2
      class="sc-dcKlJK cAsXsC card-sub-title card-subtitle"
    >
      This is another test
    </h2>
  </div>
</div>
`;

exports[`Timeline Card media > should match the snapshot ( VIDEO ) 1`] = `
<div>
  <div
    class="sc-Qotzb gPGhhl card-media-wrapper card-media"
    mode="VERTICAL_ALTERNATING"
  >
    <iframe
      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
      allowfullscreen=""
      class="sc-iQQCXo hYjopf"
      data-testid="timeline-card-content-video"
      frameborder="0"
      loading="lazy"
      src="https://www.youtube.com/watch?v=9bZkp7q19f0?enablejsapi=1"
      title="Video"
    />
  </div>
  <div
    class="sc-fWnslK idIbcW"
    mode="VERTICAL_ALTERNATING"
  >
    <div
      class="sc-kpOvIu NBiZG"
    >
      <h1
        class="sc-jPkiSJ ecXWgU card-title card-title"
      />
    </div>
    <h2
      class="sc-dcKlJK cAsXsC card-sub-title card-subtitle"
    >
      This is another test
    </h2>
  </div>
</div>
`;
